# lampswitch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  setup.py
data/: CMakeLists.txt  in.tari.lampswitch.services.policy.in  lampswitch.desktop.in
data/etc/xdg/autostart/: lampswitch.desktop
data/usr/share/lampswitch/: lampswitch.glade  services.sh
data/usr/share/polkit-1/actions/: in.tari.lampswitch.services.policy
debian/: changelog  control  copyright  postinst  rules  watch
lampswitch/: appdata.py
po/: en_GB.po  lampswitch.pot  sl.po
src/: CMakeLists.txt  glib.h  main.c
